# cloudfn-cicd-sample

./: Dockerfile  Readme.md  birthday_weekday.py  main.py  pyproject.toml  test_birthday_weekday.py
.github/workflows/: run.yml
